fix taijit examples not at all formatted like examples
The blockquote isn't displayed the way I wanted it to.

Also remove the `.word li:first-child { @apply mt-0 ; }` class, which
isn't really necessary for lists in word pages and was interferring with
taijit's examples (where the first one would lose its margin but not the
last, making it look weirdly asymmetric).

--- a/web/src/src.css
+++ b/web/src/src.css
@@ -199,9 +199,6 @@
         @apply mt-2;
       }
     }
-    li:first-child {
-      @apply mt-0;
-    }
     /* m for Mark. The "例" "英" "反" sort of marker */
     m {
       @apply inline-block pl-1 font-bold;
